// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Export> empty account list 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value=""
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> empty lastlogon 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L,"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account check Appid 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L,740"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account check SteamID 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="212V16ECZ4HE,7FJS3VY2273L"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account check last logon 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L,1995-12-17T03:24:00.000Z"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account check memo 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L,CSGO"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account copy tp clipboard 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account initial state 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value="7FJS3VY2273L"
    />
  </FormGroup>
</ActionModal>
`;

exports[`<Export> with single account uncheck token 1`] = `
<ActionModal
  action="Copy to clipboard"
  buttonIcon="export"
  buttonStyle="primary"
  buttonText="Export"
  close="Abort"
  disabled={false}
  onAction={[Function]}
  size="large"
  title="Export"
>
  <FormGroup
    bsClass="form-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-steamid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      SteamID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-token"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Token
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-appid"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      AppID
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-logon"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Last logon
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-memo"
      disabled={false}
      inline={true}
      onChange={[Function]}
      title=""
    >
      Memo
    </Checkbox>
  </FormGroup>
  <FormGroup
    bsClass="form-group"
  >
    <FormControl
      bsClass="form-control"
      className="js-output"
      componentClass="textarea"
      readOnly={true}
      rows="10"
      value=""
    />
  </FormGroup>
</ActionModal>
`;
